import java.math.BigInteger
import java.security.MessageDigest
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    java
    id("com.gradleup.shadow") version "8.3.5"
    id("xyz.jpenilla.run-paper") version "2.3.1"
}

group = "cz.coffee"
version = "5.0"

val environment: String by project.extra { if (project.hasProperty("env")) project.property("env") as String else "DEV" }
println("Using environment: $environment")

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

repositories {
    mavenCentral()
    maven("https://jitpack.io")
    maven("https://repo.skriptlang.org/releases")
    maven("https://oss.sonatype.org/content/groups/public/")
    maven("https://repo.papermc.io/repository/maven-public/")
    maven("https://repo.purpurmc.org/snapshots")
    maven("https://repo.codemc.io/repository/maven-public/")
}

dependencies {
    implementation("org.eclipse.jetty:jetty-client:12.1.0.alpha0")
    compileOnly("io.papermc.paper:paper-api:1.21.3-R0.1-SNAPSHOT")
    compileOnly("com.github.SkriptLang:Skript:2.11.0-pre1")
    implementation("com.google.code.gson:gson:2.10.1")
    compileOnly("org.glassfish.jersey.core:jersey-server:2.34")
    implementation("org.bstats:bstats-bukkit:3.1.0")
    implementation("de.tr7zw:item-nbt-api:2.14.1")
    implementation("org.yaml:snakeyaml:2.3")
    compileOnly("org.projectlombok:lombok:1.18.34")
    annotationProcessor("org.projectlombok:lombok:1.18.34")
    testCompileOnly("org.projectlombok:lombok:1.18.34")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.34")
}

sourceSets {
    named("main") {
        resources {
            srcDir("src/main/resources")
            include("plugin.yml", "config.yml", "lang/default.lang", "tests/**")
        }
    }
}

tasks.withType<JavaCompile>().configureEach {
    options.encoding = "UTF-8"
}

fun generateSHA1(): String {
    val time = System.currentTimeMillis().toString()
    val md = MessageDigest.getInstance("SHA-1")
    val digest = md.digest(time.toByteArray())
    return BigInteger(1, digest).toString(16).padStart(40, '0')
}

fun generateShortSHA1(sha1: String): String = sha1.substring(0, 8)

val fullRev = generateSHA1()
val shortRev = generateShortSHA1(fullRev)

tasks.processResources {
    filesMatching(listOf("plugin.yml", "lang/default.lang")) {
        expand(mapOf("version" to project.version, "rev" to shortRev))
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType<ShadowJar>().configureEach {
    archiveClassifier.set("shaded")
    archiveFileName.set("skjson.jar")

    relocate("org.bstats", "cz.coffee.shadowed.bstats")
    relocate("de.tr7zw.changeme.nbtapi", "cz.coffee.shadowed.nbtapi")

    exclude("META-INF/*.MF", "META-INF/*.SF", "META-INF/*.DSA", "META-INF/*.RSA")

    if (environment == "DEV") {
        doLast {
            println("> Task :copy to path")
            copy {
                from(archiveFile.get().asFile)
                into("/home/coffee/mc-developing/plugins")
            }
        }
    }
}

tasks.register("withRemote") {
    dependsOn("clean")
    finalizedBy("shadowJar")
}

fun callAPI(cmd: String) {
    val command = "curl -s http://localhost:8080/command?cmd=$cmd"
    println("Executing: $command")
    val process = ProcessBuilder("bash", "-c", command).start()
    val output = process.inputStream.bufferedReader().readText()
    process.waitFor()

    if (process.exitValue() == 0) {
        println("Command executed successfully:\n$output")
    } else {
        println("Command failed with exit code ${process.exitValue()}:\n$output")
    }
}

tasks.register("runRemote") {
    doLast {
        callAPI("reload+confirm")
    }
}